Updated the contents in kannada

--- a/our-instituitions.html
+++ b/our-instituitions.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -8,8 +8,9 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="assets/img/logo1a.jpg" rel="icon">
+  <link href="assets/img/logo1a.jpg" rel="apple-touch-icon">
+
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
@@ -35,35 +36,32 @@
 
   <body>
     <header id="header" class="d-flex align-items-center">
-      <div class="container d-flex justify-content-between align-items-center">
-        <div class="logo">
-          <h1><a href="index.html">Adavimata</a></h1>
-        </div>
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>
-              <a class="active" href="our-instituitions.html"
-                >Our Institutions</a
-              >
-            </li>
-            <li><a href="social-services.html">Social Services</a></li>
-            <li><a href="activities.html">Activities</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav>
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
       </div>
-    </header>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+            <!-- <li><a href="#about">About Us</a></li> -->
+            <li><a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
+            <li><a href="social-services.html">ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
+            <li><a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+            <li><a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+    </div>
+  </header>
 
     <main id="main">
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Our Institutions</li>
+            <li><a href="index.html">ಮುಖಪುಟ</a></li>
+            <li>ಸಂಸ್ಥೆಗಳು</li>
           </ol>
-          <h2>Our Institutions</h2>
+          <h2>ಸಂಸ್ಥೆಗಳು</h2>
         </div>
       </section>
 
@@ -85,98 +83,102 @@
               <img src="assets/img/school.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Sri Maddaneswara High school</h3>
+              <h3>ಶ್ರೀ‌ ಮದ್ದಾನೇಶ್ವರ ಶಿಕ್ಷಣ ಸಂಸ್ಥೆಗಳು</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt direna past reda
+               ಶ್ರೀ ಶಿವಲಿಂಗೇಂದ್ರಸ್ವಾಮಿಗಳು ಪಡುಗೂರು ಮಠದ ಕಿರಿಯ ಶ್ರೀಗಳಾಗಿ ಶ್ರೀ
+ಶಿವಕುಮಾರಸ್ವಾಮಿಗಳ ಮಾರ್ಗದರ್ಶನದಲ್ಲಿ ಕಾರ್ಯನಿರ್ವಹಿಸುತ್ತಾ ಬಂದರು. ಪಟ್ಟಾಧಿಕಾರ
+ದೊರೆತ ನಂತರ ಸುಮಾರು 8 ವರ್ಷಗಳವರೆಗೆ ಹಿರಿಯ ಶ್ರೀಗಳ ಸೇವೆಯನ್ನು ಮಾಡಿದ್ದಾರೆ.
+ಮಠದ ಜವಾಬ್ದಾರಿಯನ್ನು ಕ್ರಮವಾಗಿ ಹೊತ್ತು ಕ್ಷೇತ್ರಾಭಿವೃದ್ಧಿಯನ್ನು ಮಾಡುತ್ತಾ ಬಂದಿದ್ದಾರೆ.
+ಮೊದಮೊದಲು ಮಠದ ವ್ಯವಸಾಯ, ದಾಸೋಹ, ಪೂಜಾಕಾರ್ಯಗಳಲ್ಲಿ ಮಾತ್ರ
+ತೊಡಗಿಸಿಕೊಂಡು ಅನುಭವವನ್ನು ಗಳಿಸಿದರು. ಕಬ್ಬಹಳ್ಳಿ ಮತ್ತು ಮೈಸೂರಿನ ವಿದ್ಯಾರ್ಥಿ
+ನಿಲಯಗಳನ್ನು ನಡೆಸುವಷ್ಟರಲ್ಲಿಯೇ ಸೀಮಿತವಾಗಿದ್ದ ಇವರ ಸಮಾಜಸೇವೆ ಕ್ರಮೇಣ ಶಿಕ್ಷಣ
+ಸಂಸ್ಥೆಗಳನ್ನು ಕಟ್ಟುವ ಮೂಲಕ ವಿಸ್ತಾರಗೊಳ್ಳತೊಡಗಿತು. ಅದರ ಫಲವಾಗಿ ಹಿರಿಯ ಶ್ರೀಗಳು
+ಲಿಂಗೈಕ್ಯರಾದ (1995) ನಂತರ 1996ರಲ್ಲಿ ಶ್ರೀ ಮದ್ದಾನೇಶ್ವರ ವಿದ್ಯಾಸಂಸ್ಥೆಯನ್ನು ತೆರೆಯುವ
+ಮೂಲಕ ಗುಂಡ್ಲುಪೇಟೆಯಲ್ಲಿ ನರ್ಸರಿ, ಕಿರಿಯ ಮತ್ತು 
+
+ಹಿರಿಯ ಪ್ರಾಥಮಿಕ ಶಾಲೆಗಳನ್ನು
+ತೆರೆದರು. ಇವುಗಳ ಜೊತೆಗೆ 2007ನೇ ವರ್ಷದಲ್ಲಿ 'ಮಹಾಮನೆ' ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ಉಚಿತ
+ಶಿಕ್ಷಣಯೋಜನೆಯನ್ನು ಕೈಗೊಂಡು ಎಲ್ಲಾ ವರ್ಗದ ಬಡವ ಮತ್ತು ಪ್ರತಿಭಾವಂತ
+ವಿದ್ಯಾರ್ಥಿಗಳಿಗಾಗಿ ಒಂದರಿಂದ 10ನೇ ತರಗತಿಯವರೆಗೆ ಶಿಕ್ಷಣ ನೀಡಬೇಕೆಂಬ ನಿರ್ಧಾರವನ್ನು
+ಮಾಡಿ ಅದರಂತೆ ಈವರೆಗೂ ನಡೆಸುತ್ತಾ ಬಂದಿದ್ದಾರೆ. ಮಹಾಮನೆಯಲ್ಲಿ ಈಗ 65
+ವಿದ್ಯಾರ್ಥಿಗಳು ಉಚಿತ ಶಿಕ್ಷಣವನ್ನು ಪಡೆಯುತ್ತಿದ್ದಾರೆ. ಇದಕ್ಕಾಗಿ ಗುಂಡ್ಲುಪೇಟೆ ಪಟ್ಟಣದ
+ವಿದ್ಯಾಸಂಸ್ಥೆಯ ಆವರಣದಲ್ಲಿ ಸುಂದರವಾಗಿ ಹೊಸ ಕಟ್ಟಡವೊಂದನ್ನು ನಿರ್ಮಿಸಿ, 2009
+ಸೆಪ್ಟೆಂಬರ್ 27ರಂದು ಸುತ್ತೂರು ವೀರಸಿಂಹಾಸನಾಧೀಶ್ವರರಾದ ಜಗದ್ಗುರು ಶ್ರೀ ಶಿವರಾತ್ರಿ
+ದೇಶಿಕೇಂದ್ರ ಮಹಾಸ್ವಾಮಿಗಳವರ ದಿವ್ಯ ಸಾನ್ನಿಧ್ಯದಲ್ಲಿ ಅಂದಿನ ಮುಖ್ಯಮಂತ್ರಿಗಳಾಗಿದ್ದ
+ಶ್ರೀ ಬಿ.ಎಸ್. ಯಡಿಯೂರಪ್ಪನವರಿಂದ ಕಟ್ಟಡದ ಉದ್ಘಾಟನೆಯನ್ನು ಮಾಡಿಸಿದ್ದಾರೆ. ಅಂದಿನ
+ಸಭೆಯ ಅಧ್ಯಕ್ಷತೆಯನ್ನು ಗುಂಡ್ಲುಪೇಟೆ ಕ್ಷೇತ್ರದ ಶಾಸಕರಾದ ಶ್ರೀ ಹೆಚ್.ಎಸ್.
+ಮಹದೇವಪ್ರಸಾದ್ರವರು ವಹಿಸಿದ್ದರು. ಚಾಮರಾಜನಗರ ಕ್ಷೇತ್ರದ ಸಂಸದರಾದ ಶ್ರೀ
+ಧ್ರುವನಾರಾಯಣ್ರವರು ಹಾಗೂ ಸಚಿವರಾದ ಹಾಲಪ್ಪನವರು ತಾಲ್ಲೂಕಿನ ಮುಖಂಡರಾದ
+ಶ್ರೀ ಸಿ.ಎಸ್.ನಿರಂಜನ ಕುಮಾರ್, ಶ್ರೀ ಎಂ.ಪಿ. 
+
+ವೃಷಭೇಂದ್ರಪ್ಪ ಮೊದಲಾದವರು ಮುಖ್ಯ
+ಅತಿಥಿಗಳಾಗಿ ಭಾಗವಹಿಸಿದ್ದರು.
+
               </p>
             </div>
           </div>
-          <div class="row mt-5">
+        <!--  <div class="row mt-5">
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Sri Maddaneswara High school</h3>
+              <h3></h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt direna past reda
               </p>
             </div>
             <div class="col-lg-6">
               <img src="assets/img/school.jpg" class="img-fluid" alt="" />
             </div>
           </div>
-        </div>
+        </div>-->
       </section>
     </main>
-
     <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a class="active" href="index.html">Home</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="our-instituitions.html">Our Institutions</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="social-services.html">Social Services</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="activities.html">Activities</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="contact.html">Contact Us</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-4 col-md-6 footer-contact">
-              <h4>Contact Us</h4>
-              <p>
-                Adavimata, Padaguru<br />
-                Gundlupet taluk <br />
-                Chamarajanagara District - 571123<br /><br />
-                <strong>Phone:</strong> +91-9448602867<br />
-                <strong>Email:</strong> adavimata@gmail.com<br />
-              </p>
-            </div>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 footer-links">
+            <h4>ಉಪಯುಕ್ತ ಕೊಂಡಿಗಳು</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
+              <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="social-services.html">ಸಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-6 footer-contact">
+            <h4>ಸಂಪರ್ಕಿಸಿ</h4>
+            <p>
+              ಅಡವಿಮಠ, ಪಡುಗೂರು<br>
+              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br>
+              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br><br>
+              <strong>ಫೋನ್:</strong> +91-9448602867<br>
+              <strong>ಇ-ಮೇಲ್:</strong> adavimata@gmail.com<br>
+            </p>
 
-            <div class="col-lg-4 col-md-6 footer-info">
-              <h3>About Adavimata</h3>
-              <p>
-                Cras fermentum odio eu feugiat lide par naso tierra. Justo eget
-                nada terra videa magna derita valies darta donna mare fermentum
-                iaculis eu non diam phasellus.
-              </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"
-                  ><i class="bx bxl-instagram"></i
-                ></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 footer-info">
+            <h3>ಶ್ರೀ ಅಡವಿಮಠ</h3>
+            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <div class="social-links mt-3">
+              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
+
         </div>
       </div>
+    </div>
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Adavimata</span></strong
-          >. All Rights Reserved
-        </div>
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Adavimata</span></strong>. All Rights Reserved
       </div>
-    </footer>
-
+    </div>
+  </footer><!-- End Footer -->
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
