--- a/social-services.html
+++ b/social-services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -6,8 +6,8 @@
     <title>Social Services</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="assets/img/logo1a.jpg" rel="icon">
+  <link href="assets/img/logo1a.jpg" rel="apple-touch-icon">
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
@@ -32,33 +32,32 @@
 
   <body>
     <header id="header" class="d-flex align-items-center">
-      <div class="container d-flex justify-content-between align-items-center">
-        <div class="logo">
-          <h1><a href="index.html">Adavimata</a></h1>
-        </div>
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="our-instituitions.html">Our Institutions</a></li>
-            <li>
-              <a class="active" href="social-services.html">Social Services</a>
-            </li>
-            <li><a href="activities.html">Activities</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav>
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <h1><a href="index.html">ಶ್ರೀ ಅಡವಿಮಠ</a></h1>
       </div>
-    </header>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+            <!-- <li><a href="#about">About Us</a></li> -->
+            <li><a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
+            <li><a href="social-services.html">ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
+            <li><a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+            <li><a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+    </div>
+  </header>
 
     <main id="main">
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Social Services</li>
+            <li><a href="index.html">ಮುಖಪುಟ</a></li>
+            <li>ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</li>
           </ol>
-          <h2>Social Services</h2>
+          <h2>ಸಾಮಾಜಿಕ ಸೇವೆಗಳು</h2>
         </div>
       </section>
       <section id="portfolio-details" class="portfolio-details">
@@ -113,73 +112,51 @@
       </section>
     </main>
     <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a class="active" href="index.html">Home</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="our-instituitions.html">Our Institutions</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="social-services.html">Social Services</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="activities.html">Activities</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="contact.html">Contact Us</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-4 col-md-6 footer-contact">
-              <h4>Contact Us</h4>
-              <p>
-                Adavimata, Padaguru<br />
-                Gundlupet taluk <br />
-                Chamarajanagara District - 571123<br /><br />
-                <strong>Phone:</strong> +91-9448602867<br />
-                <strong>Email:</strong> adavimata@gmail.com<br />
-              </p>
-            </div>
-
-            <div class="col-lg-4 col-md-6 footer-info">
-              <h3>About Adavimata</h3>
-              <p>
-                Cras fermentum odio eu feugiat lide par naso tierra. Justo eget
-                nada terra videa magna derita valies darta donna mare fermentum
-                iaculis eu non diam phasellus.
-              </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"
-                  ><i class="bx bxl-instagram"></i
-                ></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 footer-links">
+            <h4>ಉಪಯುಕ್ತ ಕೊಂಡಿಗಳು</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a class="active" href="index.html">ಮುಖಪುಟ</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">About Us</a></li> -->
+              <li><i class="bx bx-chevron-right"></i> <a href="our-instituitions.html">ಸಂಸ್ಥೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="social-services.html">ಸಮಾಜಿಕ ಸೇವೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="activities.html">ಚಟುವಟಿಕೆಗಳು</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">ಸಂಪರ್ಕಿಸಿ</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-6 footer-contact">
+            <h4>ಸಂಪರ್ಕಿಸಿ</h4>
+            <p>
+              ಅಡವಿಮಠ, ಪಡುಗೂರು<br>
+              ಗುಂಡ್ಲುಪೇಟೆ ತಾಲ್ಲೂಕು <br>
+              ಚಾಮರಾಜನಗರ ಜಿಲ್ಲೆ - ೫೭೧೧೨೩<br><br>
+              <strong>ಫೋನ್:</strong> +91-9448602867<br>
+              <strong>ಇ-ಮೇಲ್:</strong> adavimata@gmail.com<br>
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-6 footer-info">
+            <h3>ಶ್ರೀ ಅಡವಿಮಠ</h3>
+            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <div class="social-links mt-3">
+              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
-        </div>
-      </div>
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Adavimata</span></strong
-          >. All Rights Reserved
         </div>
       </div>
-    </footer>
+    </div>
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Adavimata</span></strong>. All Rights Reserved
+      </div>
+    </div>
+  </footer><!-- End Footer -->
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
