updated the details and photos

--- a/contact.html
+++ b/contact.html
@@ -201,9 +201,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>ಶ್ರೀ ಅಡವಿಮಠ</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
+          <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
+          <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
