--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <p>ನಾದ ಬಿಂದು ಕಲಾತೀತಂ ತಸ್ಯೆ ಶ್ರೀ ಗುರವೇ ನಮಃ ||</p>
 
 ನಿರಂಜನ ಪ್ರಣವ ಸ್ವರೂಪಿಗಳಾದ ಶ್ರೀ ಶಿವಕುಮಾರ ಸ್ವಾಮಿಗಳು ಪಡುಗೂರು
-ಅಡವೀಮಠದ ಇಂದಿನ ಗುರುಗಳು. ಈ ಮಹಾನುಭಾವರು ಮೂಡುಗೂರು ಮಠದ ಶಾಂತವೀರ
+ಅಡವೀಮಠದ ಗುರುಗಳು. ಈ ಮಹಾನುಭಾವರು ಮೂಡುಗೂರು ಮಠದ ಶಾಂತವೀರ
 ದೇವರು ಮತ್ತು ಗಿರಿಜಮ್ಮನವರ ಸುಪುತ್ರರಾಗಿ 25-6-1917ರಂದು ಜನಿಸಿದರು. ಬುದ್ದಿಯವರ
 11ನೆಯ ವಯಸ್ಸಿನಲ್ಲಿ ಎಂದರೆ 1928ನೆಯ ಇಸವಿ ಫೆಬ್ರವರಿ ತಿಂಗಳಿನಲ್ಲಿ ಪಡುಗೂರು ಶ್ರೀ
 ಅಡವೀ ಮಠದ ವಿರಕ್ತಾಶ್ರಮಾಧಿಕಾರವನ್ನು ವಹಿಸಿಕೊಂಡರು.   
@@ -225,8 +225,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>ಶ್ರೀ ಅಡವಿಮಠ</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
