--- a/our-instituitions.html
+++ b/our-instituitions.html
@@ -82,6 +82,9 @@
             <div class="col-lg-6">
               <img src="assets/img/school.jpg" class="img-fluid" alt="" />
             </div>
+            <div class="col-lg-6">
+              <img src="assets/img/mahamane.jpg" class="img-fluid" alt="" />
+            </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3>ಶ್ರೀ‌ ಮದ್ದಾನೇಶ್ವರ ಶಿಕ್ಷಣ ಸಂಸ್ಥೆಗಳು</h3>
               <p class="fst-italic">
@@ -158,9 +161,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>ಶ್ರೀ ಅಡವಿಮಠ</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
+          <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
+          <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
