--- a/social-services.html
+++ b/social-services.html
@@ -67,15 +67,15 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/portfolio-1.jpg" alt="" />
+                    <img src="assets/img/slide/mahamane1.jpg" alt="" />
                   </div>
 
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/portfolio-2.jpg" alt="" />
+                    <img src="assets/img/slide/farming.jpeg" alt="" />
                   </div>
 
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/portfolio-3.jpg" alt="" />
+                    <img src="assets/img/oldagehome.jpg" alt="" />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -96,14 +96,22 @@
                 </ul>
               </div> -->
               <div class="portfolio-description">
-                <h2>Social services heading</h2>
+                <h2>ಉಚಿತ ಶಿಕ್ಷಣ - ಮಹಾಮನೆ</h2>
                 <p>
-                  Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
-                  itaque inventore commodi labore quia quia. Exercitationem
-                  repudiandae officiis neque suscipit non officia eaque itaque
-                  enim. Voluptatem officia accusantium nesciunt est omnis
-                  tempora consectetur dignissimos. Sequi nulla at esse enim cum
-                  deserunt eius.
+                  ೨೦೦೭ ನೇ ವರ್ಷದಲ್ಲಿ ʼಮಹಾಮನೆʼ ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ಉಚಿತ ಶಿಕ್ಷಣಯೋಜನೆಯನ್ನು ಕ್ಯೆಗೊಂಡು ಎಲ್ಲಾ ವರ್ಗದ ಬಡವ ಮತ್ತು ಪ್ರತಿಭಾವಂತ ವಿಧ್ಯಾರ್ಥಿಗಳಿಗಾಗಿ 
+                  ೧ ರಿಂದ ೧೦ ನೇ ತರಗತಿಯವರೆಗೆ ಶಿಕ್ಷಣ ನೀಡಬೇಕೆಂಬ ನಿರ್ಧಾರವನ್ನು ಮಾಡಿ ಅದರಂತೆ ಈವರೆಗೂ ನಡೆಸುತ್ತಾ ಬಂದ್ದಿದ್ದಾರೆ.
+                </p>
+              </div>
+               <div class="portfolio-description">
+                <h2>ವ್ರದ್ಧಾಶ್ರಮ - ಹಿರಿಯರ ಮನೆ</h2>
+                <p>
+                  ೨೦೨೨ ನೇ ವರ್ಷದಲ್ಲಿ ʼಹಿರಿಯರ ಮನೆʼ ಎಂಬ ಹೆಸರಿನಲ್ಲಿ ವ್ರದ್ಧಾಶ್ರಮವನ್ನು ಫ್ರಾರಂಭಿಸಿದ್ದಾರೆ. ಇದು ಮಠದ ಆವರಣದಲ್ಲಿದ್ದು, ವಯೋವ್ರದ್ಧರಿಗಾಗಿ ಸಕಲ ಸೌಲಭ್ಯಗಳನ್ನು ಒಳಗೊಂಡಿದೆ.
+                </p>
+              </div>
+              <div class="portfolio-description">
+                <h2>ಜಾನುವಾರುಗಳಿಗೆ ಅಸರೆ - ಗೋಶಾಲೆ</h2>
+                <p>
+                  ಶ್ರೀ ಮಠವು ವ್ಯವಾಸಯದೊಂದಿಗೆ ಹಲವಾರು ವರ್ಷಗಳಿಂದ ಜಾನುವಾರುಗಳನ್ನು ಸಹ ಪೊಷಿಸುತ್ತಿದೆ.
                 </p>
               </div>
             </div>
@@ -136,10 +144,10 @@
               <strong>ಇ-ಮೇಲ್:</strong> adavimata@gmail.com<br>
             </p>
           </div>
+
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>ಶ್ರೀ ಅಡವಿಮಠ</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
+          <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
+          <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
