--- a/activities.html
+++ b/activities.html
@@ -83,7 +83,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-1.jpg"
+                  src="assets/img/portfolio/portfolio-1.jpeg"
                   class="img-fluid"
                   alt=""
                 />
@@ -109,7 +109,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-2.png"
+                  src="assets/img/portfolio/portfolio-2.jpg"
                   class="img-fluid"
                   alt=""
                 />
@@ -118,7 +118,7 @@
                   <p>Web</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-2.png"
+                      href="assets/img/portfolio/portfolio-2.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Web 3"
@@ -161,7 +161,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-4.jpeg"
+                  src="assets/img/portfolio/portfolio-4.jpg"
                   class="img-fluid"
                   alt=""
                 />
@@ -170,7 +170,7 @@
                   <p>Card</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-4.jpeg"
+                      href="assets/img/portfolio/portfolio-4.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 2"
@@ -239,7 +239,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-7.jpg"
+                  src="assets/img/portfolio/portfolio-7.jpeg"
                   class="img-fluid"
                   alt=""
                 />
@@ -248,7 +248,7 @@
                   <p>Card</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-7.jpg"
+                      href="assets/img/portfolio/portfolio-7.jpeg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 1"
@@ -265,7 +265,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-8.jpg"
+                  src="assets/img/portfolio/portfolio-8.png"
                   class="img-fluid"
                   alt=""
                 />
@@ -274,7 +274,7 @@
                   <p>Card</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-8.jpg"
+                      href="assets/img/portfolio/portfolio-8.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 3"
@@ -349,9 +349,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>ಶ್ರೀ ಅಡವಿಮಠ</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
+          <h3>ಶ್ರೀ ಅಡವಿಮಠ-ಸಾಮಾಜಿಕ ಜಾಲತಾಣಗಳು</h3>
+          <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
