--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated fanimate__adeInDown">ಶ್ರೀ ಗುರು ಮದ್ದಾನೇಶ್ವರರು</span></h2>
-                <p class="animate__animated animate__fadeInUp">ಶರಣು ಮದ್ದಾನೆಶಾಂತನೆ ಪ್ರವುಡರಾಜೇಂದ್ರ
+                <p class="animate__animated animate__fadeInUp">ಶರಣು ಮದ್ದಾನೆಶಾಂತನೆ ಪ್ರವುಡರಾಜೇಂದ್ರ<br/>
 ಗುರುವ ನಿಮ್ಮಯ ನಾಮ ಕೇಳು ಮದ್ದಾನೆಯಂ
 ತರಿಸಿ ನಿಮ್ಮಯ ಸತ್ವ ನೋನೆಂಬುತ ಬಂದ ಪರಮಪುರುಷನೆ ಕೇಳೆನೆ
 ಹರಹರಾ ಭಿಕ್ಷುಕರ ಸತ್ವವನು ನೋಳ್ಳಡೇ
@@ -99,9 +99,9 @@
           <div class="carousel-item" style="background: url(assets/img/slide/slide5.jpg)">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">ಶ್ರೀ ಶಿವಕುಮಾರಸ್ವಾಮಿಗಳವರು</span></h2>
-                <p class="animate__animated animate__fadeInUp"> <p>ಚೈತನ್ಯಂ ಶಾಶ್ವತಂ ಶಾಂತಂ ಪ್ರೋಮಾತೀತಂ ನಿರಂಜನಂ</p>
-<p>ನಾದ ಬಿಂದು ಕಲಾತೀತಂ ತಸ್ಯೆ ಶ್ರೀ ಗುರವೇ ನಮಃ ||</p>
+              <h2 class="animate__animated animate__fadeInDown"><span>ಶ್ರೀ ಶಿವಕುಮಾರಸ್ವಾಮಿಗಳವರು</span></h2>
+                <p class="animate__animated animate__fadeInUp"> <p>ಚೈತನ್ಯಂ ಶಾಶ್ವತಂ ಶಾಂತಂ ಪ್ರೋಮಾತೀತಂ ನಿರಂಜನಂ<br/>
+ನಾದ ಬಿಂದು ಕಲಾತೀತಂ ತಸ್ಯೆ ಶ್ರೀ ಗುರವೇ ನಮಃ ||</p>
 
 ನಿರಂಜನ ಪ್ರಣವ ಸ್ವರೂಪಿಗಳಾದ ಶ್ರೀ ಶಿವಕುಮಾರ ಸ್ವಾಮಿಗಳು ಪಡುಗೂರು
 ಅಡವೀಮಠದ ಗುರುಗಳು. ಈ ಮಹಾನುಭಾವರು ಮೂಡುಗೂರು ಮಠದ ಶಾಂತವೀರ
